--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
 
 
-
-
-
+					"data/hero/rogue"    : "../diablo/game-project/data/hero/startHeroesData/rogue.js",
+					"data/hero/sorcerer" : "../diablo/game-project/data/hero/startHeroesData/sorcerer.js",
+					"data/hero/warrior"  : "../diablo/game-project/data/hero/startHeroesData/warrior.js",
 
 					"level/cathedralGenerator" : "../diablo/game-project/scr/level/cathedralGenerator.js",
 					"level/doors" : "../diablo/game-project/scr/level/doors.js",
